--- a/mangadb/src/css/index.css
+++ b/mangadb/src/css/index.css
@@ -11,7 +11,7 @@ section{
     min-height: 100vh;
     width: 100%;
     
-    background: url('./assets/background7.jpeg')no-repeat;
+    background: url('../assets/background7.jpeg')no-repeat;
     background-position: center;
     background-size: cover;
 }
@@ -114,3 +114,4 @@ button{
 .register p a:hover{
     text-decoration: underline;
 }
+
