--- a/mangadb/src/css/homepage.css
+++ b/mangadb/src/css/homepage.css
@@ -65,8 +65,13 @@
 .book-block{
     flex-shrink: 0;
     width: 256px;
-    height: 350px;
+    height: 370px;
     margin-bottom: 5px;
+    border: 1px solid black;
+}
+
+.book-block:hover{
+  border: 1px solid whitesmoke;
 }
 
 .book-block > img{
@@ -82,52 +87,86 @@
   overflow: hidden;
   white-space: nowrap;
 }
-
-.menu-container {
+.menu {
+  outline: none;
+  background-color: transparent;
   display: flex;
   flex-direction: column;
-  font-size: 12px;
+  font-size: 25px;
+  width: 300px;
+  height: 300px;
+
 }
+
 .MenuButton{
   background-color: transparent;
   border-radius: 1px;
   text-align: left;
   text-indent: 10px;
-  margin-right: 50px;
-  font-size: 30px;
-  
 }
 .MenuButton:hover{
   background: gray;
 }
+.HomeButton{
+  background-color: transparent;
+  border-radius: 5px;
+  text-align: left;
+  text-indent: 30px;
 
+}
 .HomeButton:hover{
   background-color: peru;
 }
-.RankingButton:hover{
+.MostPopularButton{
+  background-color: transparent;
+  border-radius: 5px;
+  text-align: left;
+  text-indent: 30px;
+
+}
+.MostPopularButton:hover{
   background-color: peru;
 }
 
 .AccountButton{
-  margin-top: 200px;
+  
+  margin-top: 50px;
   background-color: transparent;
   border-radius: 1px;
   text-align: left;
   text-indent: 10px;
-  margin-right: 50px;
-  font-size: 30px;
 }
 .AccountButton:hover{
   background: gray;
 }
+.ProfileButton{
+  background-color: transparent;
+  border-radius: 5px;
+  text-align: left;
+  text-indent: 30px;
+  
+}
 .ProfileButton:hover{
   background-color: peru;
 }
-.MyListButton:hover{
+.MyFavoriteListButton{
+  background-color: transparent;
+  border-radius: 5px;
+  text-align: left;
+  text-indent: 30px;
+ 
+}
+.MyFavoriteListButton:hover{
   background-color: peru;
+}
+.SettingButton{
+  background-color: transparent;
+  border-radius: 5px;
+  text-align: left;
+  text-indent: 30px;
+  
 }
 .SettingButton:hover{
   background-color: peru;
 }
-
 
