--- a/mangadb/src/css/homepage.css
+++ b/mangadb/src/css/homepage.css
@@ -1,14 +1,13 @@
 .item1 { grid-area: header; }
 .item2 { grid-area: menu; }
 .item3 { grid-area: main; }
-.item5 { grid-area: footer; }
 
 .grid-container {
     display: grid;
     grid-template-areas:
       'header header header header header header'
       'menu main main main main main'
-      'menu footer footer footer footer footer';
+      'menu main main main main main';
     gap: 10px;
     background-color: #1B6FA8;
     padding: 10px;
@@ -25,7 +24,7 @@
     outline: none;
 }
 
-#item_5{
+#item_3{
   background-color: #181818;
   color: whitesmoke;
   padding: 25px;
