--- a/mangadb/src/css/mangapage.css
+++ b/mangadb/src/css/mangapage.css
@@ -34,3 +34,28 @@
     font-size: 25px;
     margin-right: 10px;   
 }
+#orderSelect {
+    background-color: #10a7c2;
+    color: whitesmoke;
+    margin-left: 10px;
+    padding: 5px;
+    font-size: 20px;
+    border-radius: 5px;
+    width: 200px;
+}
+  
+#firstPage{
+    margin: 0px;
+    background-color: #10a7c2;
+    color: white;
+    margin-top: 5px;
+    margin-left: 10px;
+    font-size: 25px;
+    border-radius: 5px;
+    width: 200px;
+    font-weight: normal;
+    height: 42px;
+}
+#firstPage:hover{
+    background-color: peru;
+}
