--- a/mangadb/src/css/homepage.css
+++ b/mangadb/src/css/homepage.css
@@ -191,3 +191,13 @@
 .MusicPlaylist{
   background-color: none;
 }
+
+
+#UserValidationButtons {
+  width: 100px;
+  font-size: 18px;
+  background-color: #10a7c2;
+  color: white;
+  margin: 20px;
+  float: right;
+}
