--- a/mangadb/src/css/profile.css
+++ b/mangadb/src/css/profile.css
@@ -26,10 +26,12 @@
     color: whitesmoke;
     overflow-y: hidden;
     
+    
+    
   }
   .introduce-input {
     margin-top: 50px;
-    width: 1050px;
+    width: 800px;
     height: 200px;
     padding: 10px;
     border: 1px solid #ccc;
@@ -38,42 +40,82 @@
     box-sizing: border-box;
     vertical-align: top;
     resize: none;
-    display: flex;
-    margin-left: 185px;
+
   }
   .savebutton{
     max-width: 350px;
     margin-top: 20px;
   }
+
+ 
  .profilepic{
-  display: flex;
-  margin: 20px;
-  margin-left: 185px;
-  border-radius: 50%;
+  align-content: center;
+  margin-top: 15px;
  }
 .pic{
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  display: flex;
+
   align-items: center;
 }
 .username{
-  display: block;
-  margin-left: 20px;
-  text-align:  left;
-  width: 500px;
+
 }
 
-.cpbutton{
-  width: 200px;
-  font-size: 20px;
-  background-color: gold;
+
+
+.Card{
+  width: 900px;
+  height: 900px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0px 1px 10px 1px black;
 }
-.cpbutton-area{
- text-align: left;
- margin-left: 185px;
+.upper-container{
+  height: 150px;
+  background: linear-gradient(to left, #2d00f7, #ff0291);
+}
+.image-container img{
+  background: white;
+  width: 200px;
+  height: 200px; 
+  border-radius:50%;
+  padding: 5px;
+  transform: translate(5px, 35px);
+
+}
+
+img{
+  border: 2px solid #8e00b9;
+}
+.lower-container{
+  margin-top: 13%;
+  font-weight: 800;
+  height: 60%;
+  background: white;
+  text-align: center;
+}
+
+
+.Card-Area{
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
 }
 .deletebutton{
-  background-color: red;
+margin-top: 20%;
+font: bold;
+border-radius: 6px;
+transition-duration: 0.5s;
+border:1px solid #8e00b9;
+transition-duration: 0.5s;
+animation: ease-in-out;
+}
+.deletebutton:hover{
+  background-image:linear-gradient(to left, #2d00f7, red) ;
+  transform: scale(1.2);
+  border: none;
+  color:white;
 }
