--- a/mangadb/src/css/FavoritesListComponent.css
+++ b/mangadb/src/css/FavoritesListComponent.css
@@ -49,7 +49,7 @@
     display: inline-block;
     flex-shrink: 0;
     width: 256px;
-    height: 490px;
+    height: 540px;
     margin: 20px;
     border: 2px solid rgb(32,32,32);
     background-color: whitesmoke;
@@ -87,4 +87,16 @@
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   white-space: normal;
+}
+
+#remove {
+  background-color: #10a7c2;
+  padding: 10px;
+  height: 40px;
+  margin: auto;
+}
+
+#trashbutton {
+  width: 30px;
+  margin: 0;
 }
