--- a/mangadb/src/css/profile.css
+++ b/mangadb/src/css/profile.css
@@ -1,95 +1,88 @@
-.p1 { grid-area: header; }
-.p2 { grid-area: menu; }
-.p3 { grid-area: main; }
+.p1 {
+  grid-area: header;
+}
+.p2 {
+  grid-area: menu;
+}
+.p3 {
+  grid-area: main;
+}
 
 .grid-container {
-    display: grid;
-    grid-template-areas:
-      'header header header header header header'
-      'menu  main main main main main'
-      'menu main main main main main';
-    background-color: #1B6FA8;
-    min-height: 90vh;
-    grid-template-columns: 250px auto;
-
+  display: grid;
+  grid-template-areas:
+    "header header header header header header"
+    "menu  main main main main main"
+    "menu main main main main main";
+  background-color: #1b6fa8;
+  min-height: 90vh;
+  grid-template-columns: 250px auto;
 }
-#p_1{
-    background-color: whitesmoke;
-    border: 1px solid #1f1f1f;
-  }
-  #p_2{
-    background-color:#10a7c2;
-    width: 250px;
-  }
-  
-  #p_3{
-    color: whitesmoke;
-    overflow-y: hidden;
-    
-    
-    
-  }
-  .introduce-input {
-    margin-top: 50px;
-    width: 800px;
-    height: 200px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 14px;
-    box-sizing: border-box;
-    vertical-align: top;
-    resize: none;
+#p_1 {
+  background-color: whitesmoke;
+  border: 1px solid #1f1f1f;
+}
+#p_2 {
+  background-color: #10a7c2;
+  width: 250px;
+}
 
-  }
-  .savebutton{
-    max-width: 350px;
-    margin-top: 20px;
-  }
+#p_3 {
+  color: whitesmoke;
+  overflow-y: hidden;
+}
+.introduce-input {
+  margin-top: 50px;
+  width: 800px;
+  height: 200px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  box-sizing: border-box;
+  vertical-align: top;
+  resize: none;
+}
+.savebutton {
+  max-width: 350px;
+  margin-top: 20px;
+}
 
- 
- .profilepic{
+.profilepic {
   align-content: center;
   margin-top: 15px;
- }
-.pic{
+}
+.pic {
   width: 200px;
   height: 200px;
   border-radius: 50%;
 
   align-items: center;
 }
-.username{
-
+.username {
 }
 
-
-
-.Card{
+.Card {
   width: 900px;
   height: 900px;
   background: white;
   border-radius: 10px;
   box-shadow: 0px 1px 10px 1px black;
 }
-.upper-container{
+.upper-container {
   height: 150px;
   background: linear-gradient(to left, #2d00f7, #ff0291);
 }
-.image-container img{
+.image-container img {
   background: white;
   width: 200px;
-  height: 200px; 
-  border-radius:50%;
+  height: 200px;
+  border-radius: 50%;
   padding: 5px;
   transform: translate(5px, 35px);
-
 }
 
-img{
-  border: 2px solid #8e00b9;
-}
-.lower-container{
+.lower-container {
   margin-top: 13%;
   font-weight: 800;
   height: 60%;
@@ -97,25 +90,24 @@ img{
   text-align: center;
 }
 
-
-.Card-Area{
+.Card-Area {
   display: flex;
   width: 100%;
   height: 100vh;
   justify-content: center;
 }
-.deletebutton{
-margin-top: 20%;
-font: bold;
-border-radius: 6px;
-transition-duration: 0.5s;
-border:1px solid #8e00b9;
-transition-duration: 0.5s;
-animation: ease-in-out;
+.deletebutton {
+  margin-top: 20%;
+  font: bold;
+  border-radius: 6px;
+  transition-duration: 0.5s;
+  border: 1px solid #8e00b9;
+  transition-duration: 0.5s;
+  animation: ease-in-out;
 }
-.deletebutton:hover{
-  background-image:linear-gradient(to left, #2d00f7, red) ;
+.deletebutton:hover {
+  background-image: linear-gradient(to left, #2d00f7, red);
   transform: scale(1.2);
   border: none;
-  color:white;
+  color: white;
 }
