--- a/mangadb/src/css/homepage.css
+++ b/mangadb/src/css/homepage.css
@@ -91,7 +91,7 @@
 }
 
 .grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: whitesmoke;
   text-align: center;
   font-size: 30px;
   overflow-x: auto;
