--- a/mangadb/src/css/FavoritesListComponent.css
+++ b/mangadb/src/css/FavoritesListComponent.css
@@ -1,7 +1,7 @@
 .FavoritesListContainer {
     width: 100%;
     height: 100%;
-    background-color: #1F1F1F;
+    background-image:linear-gradient(to right, #16222a, #3a6073);
     color: white;
 }
 
