--- a/mangadb/src/css/HotCategories.css
+++ b/mangadb/src/css/HotCategories.css
@@ -21,7 +21,7 @@
   padding: 10px;
 }
 .hotcategories {
-  background-color: #10a7c2;
+  background-image:linear-gradient(to right, #16222a, #3a6073);
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
   box-sizing: border-box;
