--- a/mangadb/src/css/homepage.css
+++ b/mangadb/src/css/homepage.css
@@ -6,6 +6,8 @@
 }
 .item3 {
   grid-area: main;
+  background-image:linear-gradient(to right, #16222a, #3a6073);
+
 }
 
 * {
@@ -14,7 +16,7 @@
 
 #loginButton,
 #logoutBtn {
-  background-color: #10a7c2;
+  background-color: #7558b1;
   color: white;
   text-decoration: none;
   padding: 5px;
@@ -27,10 +29,10 @@
   font-weight: normal;
 }
 #loginButton:hover {
-  background-color: peru;
+  background-image:linear-gradient(to right, #16222a, #3a6073);
 }
 #logoutBtn:hover {
-  background-color: peru;
+  background-image:linear-gradient(to right, #16222a, #3a6073);
 }
 
 .topnav {
@@ -46,7 +48,7 @@
   position: absolute;
   background-color: white;
   overflow-y: auto;
-  width: 200px;
+  width: 700px;
 }
 
 .dropdown > p {
@@ -103,7 +105,7 @@
   border-top: 1px solid #1f1f1f;
 }
 #item_2 {
-  background-image: linear-gradient(rgb(17, 24, 39), rgb(75, 85, 99));
+  background-image:linear-gradient(to right, #16222a, #3a6073);
   width: 250px;
   position: fixed;
   height: 100%;
@@ -122,7 +124,7 @@
 }
 
 .cont_read_container {
-  background-image: linear-gradient(rgb(17, 24, 39), rgb(75, 85, 99));
+  background-image:linear-gradient(to right, #16222a, #3a6073);
   height: 100%;
 }
 
