--- a/mangadb/src/css/homepage.css
+++ b/mangadb/src/css/homepage.css
@@ -51,17 +51,41 @@
 }
 
 .dropdown > p {
+  text-align: center;
   border-top-style: solid;
   border-bottom-style: solid;
   border-width: 1px;
   width: 700px;
   height: 50px;
   font-size: 13px;
-  margin-right: auto;
-  margin-left: auto;
+  padding-top: 18px;
   overflow-x: hidden;
   user-select: none;
   justify-content: center;
+}
+
+#searchIcon {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 10px;
+  color: #10a7c2;
+  padding: 5px;
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
+#hideBtn {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 10px;
+  color: #10a7c2;
+  padding: 5px;
+  margin-top: 10px;
+}
+
+#searchIcon:hover,
+#hideBtn:hover {
+  color: peru;
 }
 
 .dropdown > p:hover {
